@@ -56,12 +56,12 @@ namespace QuantLib {
         <li>Sao Paulo City Day, January 25th (up to 2021 included)</li>
         <li>Tiradentes's Day, April 21th</li>
         <li>Labour Day, May 1st</li>
-        <li>Revolution Day, July 9th</li>
+        <li>Revolution Day, July 9th (up to 2021 included)</li>
         <li>Independence Day, September 7th</li>
         <li>Nossa Sra. Aparecida Day, October 12th</li>
         <li>All Souls Day, November 2nd</li>
         <li>Republic Day, November 15th</li>
-        <li>Black Consciousness Day, November 20th (since 2007)</li>
+        <li>Black Consciousness Day, November 20th (since 2007, except 2022 and 2023)</li>
         <li>Christmas Eve, December 24th</li>
         <li>Christmas, December 25th</li>
         <li>Passion of Christ</li>
