@@ -1,9 +1,13 @@
+2024-07-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ql/time/calendars/brazil.?pp: Updated from QuantLib 1.35 (rc)
+
 2024-07-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
 
-	* src/ql/time/calendars/chile.{cpp,hpp}: Updated from QuantLib 1.35 (rc)
-	* src/ql/time/calendars/india.{cpp,hpp}: Idem
+	* src/ql/time/calendars/chile.?pp: Updated from QuantLib 1.35 (rc)
+	* src/ql/time/calendars/india.?pp: Idem
 	* src/ql/time/calendars/unitedstates.cpp: Idem
 
 2024-05-19  Dirk Eddelbuettel  <edd@debian.org>
